@@ -37,6 +37,8 @@ use vars qw($VERSION) ;
 
 $VERSION = sprintf "1.%04d", q$Revision$ =~ /(\d+)/;
 
+my $logger = get_logger("Tree::Element::Value") ;
+
 =head1 NAME
 
 Config::Model::Value - Strongly typed configuration value
@@ -219,7 +221,7 @@ sub set_default {
 		     ) 
 	      unless $ok ;
 
-	get_logger("Tree::Element::Value")
+	$logger
 	  ->debug("Set $item value for ",$self->name,"") ;
 
 	$self->{$item} = $def ;
@@ -444,7 +446,7 @@ sub setup_enum_choice {
 
     my @choice = ref $_[0] ? @{$_[0]} : @_ ;
 
-    get_logger("Tree::Element::Value")
+    $logger
       ->debug($self->name, " setup_enum_choice with '",join("','",@choice));
 
     # store all enum values in a hash. This way, checking
@@ -460,6 +462,43 @@ sub setup_enum_choice {
 	delete $self->{$_}
 	  if (defined  $self->{$_} and not $self->check($self->{$_},1)) ;
     } qw/data preset/;
+}
+
+=item match
+
+Perl regular expression. The value will be match with the regex to
+assert its validity. Example C<< match => '^foo' >> means that the
+parameter value must begin with "foo". Valid only for C<string> or
+C<uniline> values.
+
+=cut
+
+sub setup_match_regexp {
+    my ($self,$ref) = @_ ;
+
+    my $str = $self->{match} = delete $ref->{match} ;
+    return unless defined $str ;
+    my $vt = $self->{value_type} ; 
+
+    if ($vt ne 'uniline' and $vt ne 'string') {
+	Config::Model::Exception::Model
+		-> throw (
+			  object => $self,
+			  error => "Can't use match regexp with $vt, "
+			         . "expected 'uniline' or 'string'"
+			 ) ;
+    }
+
+    $logger -> debug($self->name, " setup_match_regexp with '$str'");
+    $self->{regexp} = eval { qr/$str/ ;} ;
+
+    if ($@) {
+	Config::Model::Exception::Model
+		-> throw (
+			  object => $self,
+			  error => "Unvalid match regexp for '$str': $@"
+			 ) ;
+    }
 }
 
 =item replace
@@ -498,7 +537,7 @@ ref. Example:
 
 
 my @warp_accessible_params =  qw/min max mandatory default 
-                             choice convert upstream_default replace/ ;
+				 choice convert upstream_default replace match/ ;
 
 my @accessible_params =  (@warp_accessible_params, 
 			  qw/index_value element_name value_type
@@ -576,7 +615,7 @@ sub set_properties {
     # merge data passed to the constructor with data passed to set_properties
     my %args = (%{$self->{backup}},@_ );
 
-    my $logger = get_logger("Tree::Element::Value") ;
+    my $logger = $logger ;
     if ($logger->is_debug) {
 	$logger->debug("Leaf '".$self->name."' set_properties called with '",
 		       join("','",sort keys %args),"'");
@@ -617,6 +656,7 @@ sub set_properties {
     $self->set_default        ( \%args );
     $self->set_compute        ( \%args ) if defined $args{compute};
     $self->set_convert        ( \%args ) if defined $args{convert};
+    $self->setup_match_regexp ( \%args ) if defined $args{match};
 
     # cannot be warped
     $self->set_migrate_from   ( \%args ) if defined $args{migrate_from};
@@ -1153,6 +1193,12 @@ sub check_value {
 	    -> throw (object => $self, message => $msg) ;
     }
 
+    if (defined $self->{regexp} and defined $value) {
+	push @error,"value '$value' does not match regexp "
+	    .$self->{match} 
+		unless $value =~ $self->{regexp} ;
+    }
+
     $self->{error} = \@error ;
     return wantarray ? @error : not scalar @error ;
 }
@@ -1315,9 +1361,8 @@ sub load_data {
 		     ) ;
     }
     else {
-	my $l = get_logger("Tree::Element::Value");
-	if ($l->is_info) {
-	    $l->info("Value load_data (",$self->location,") will store value $data");
+	if ($logger->is_info) {
+	    $logger->info("Value load_data (",$self->location,") will store value $data");
 	}
 	$self->store($data) ;
     }
